force-app/main/default/objects/FS_Artifact__c/FS_Artifact__c.object-meta.xml
<CustomObject>
    <description>Artifact</description>
    <label>Artifact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>