force-app/main/default/objects/FS_Artifact__c/fields/Confirm_Save__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Save__c</fullName>
    <label>Confirm Save</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IsValid__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>