force-app/main/default/objects/FS_Artifact__c/fields/DependancyBreakVersion__c.field-meta.xml
<CustomField>
    <fullName>DependancyBreakVersion__c</fullName>
    <label>Dependency Break Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>