force-app/main/default/objects/FS_Artifact__c/fields/FOT_DryRun_Artifact__c.field-meta.xml
<CustomField>
    <fullName>FOT_DryRun_Artifact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DryRun Artifact</label>
    <referenceTo>FS_Artifact_Ruleset__c</referenceTo>
    <relationshipLabel>Dry Run Artifact</relationshipLabel>
    <relationshipName>DryRunArtifacts</relationshipName>
    <type>Lookup</type>
</CustomField>