force-app/main/default/objects/FS_Artifact__c/fields/FOT_Publish_Artifact__c.field-meta.xml
<CustomField>
    <fullName>FOT_Publish_Artifact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publish Artifact</label>
    <referenceTo>FS_Artifact_Ruleset__c</referenceTo>
    <relationshipLabel>Publish Artifact</relationshipLabel>
    <relationshipName>PublishArtifact</relationshipName>
    <type>Lookup</type>
</CustomField>