force-app/main/default/objects/FS_Artifact__c/fields/FOT_Rule_S3_Path__c.field-meta.xml
<CustomField>
    <fullName>FOT_Rule_S3_Path__c</fullName>
    <label>Rule S3 Path</label>
    <type>Url</type>
</CustomField>