force-app/main/default/objects/FS_Artifact__c/fields/FS_Artifact_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Artifact_Type__c</fullName>
    <description>Artifact Type</description>
    <label>Artifact Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Settings</fullName>
            </value>
            <value>
                <fullName>RoundingRules</fullName>
            </value>
            <value>
                <fullName>CUI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>