force-app/main/default/objects/FS_Artifact__c/fields/FS_Cloud_Toolbox_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_Cloud_Toolbox_Version__c</fullName>
    <label>Cloud Toolbox Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>