force-app/main/default/objects/FS_Artifact__c/fields/FS_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_Country__c</fullName>
    <description>Country</description>
    <label>Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>