force-app/main/default/objects/FS_Artifact__c/fields/FS_Dependency_M_in_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_Dependency_M_in_Version__c</fullName>
    <description>DependencyMinVersion</description>
    <label>Dependency Minimum Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>