force-app/main/default/objects/FS_Artifact__c/fields/FS_Deployment_Group_Rule__c.field-meta.xml
<CustomField>
    <fullName>FS_Deployment_Group_Rule__c</fullName>
    <label>Deployment Group Rule</label>
    <length>4048</length>
    <type>LongTextArea</type>
</CustomField>