force-app/main/default/objects/FS_Artifact__c/fields/FS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>FS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabled</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>