force-app/main/default/objects/FS_Artifact__c/fields/FS_Package_S3Path__c.field-meta.xml
<CustomField>
    <fullName>FS_Package_S3Path__c</fullName>
    <label>Package S3 Path</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>