force-app/main/default/objects/FS_Artifact__c/fields/FS_Published_Artifact__c.field-meta.xml
<CustomField>
    <fullName>FS_Published_Artifact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dry Run Artifact</description>
    <label>Published Artifact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FS_Artifact__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Published</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Artifact__c</referenceTo>
    <relationshipLabel>Published Artifacts</relationshipLabel>
    <relationshipName>Published_Artifacts</relationshipName>
    <type>Lookup</type>
</CustomField>