force-app/main/default/objects/FS_Artifact__c/fields/FS_Rank__c.field-meta.xml
<CustomField>
    <fullName>FS_Rank__c</fullName>
    <description>Rank</description>
    <label>Rank</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>