force-app/main/default/objects/FS_Artifact__c/fields/FS_Republished_For_Cloud_Toolbox_Fix__c.field-meta.xml
<CustomField>
    <fullName>FS_Republished_For_Cloud_Toolbox_Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Republished For Cloud Toolbox Fix</label>
    <type>Checkbox</type>
</CustomField>