force-app/main/default/objects/FS_Artifact__c/fields/FS_Rule__c.field-meta.xml
<CustomField>
    <fullName>FS_Rule__c</fullName>
    <description>Rule</description>
    <label>Rule</label>
    <length>4048</length>
    <type>LongTextArea</type>
</CustomField>