force-app/main/default/objects/FS_Artifact__c/fields/FS_Ruleset__c.field-meta.xml
<CustomField>
    <fullName>FS_Ruleset__c</fullName>
    <label>Rule Set</label>
    <referenceTo>FS_Artifact_Ruleset__c</referenceTo>
    <relationshipLabel>Artifacts</relationshipLabel>
    <relationshipName>Artifacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>