force-app/main/default/objects/FS_Artifact__c/fields/FS_S3Path__c.field-meta.xml
<CustomField>
    <fullName>FS_S3Path__c</fullName>
    <description>S3Path</description>
    <label>S3 Path</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>