force-app/main/default/objects/FS_Artifact__c/fields/FS_UUID__c.field-meta.xml
<CustomField>
    <fullName>FS_UUID__c</fullName>
    <description>UUId</description>
    <label>UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>