force-app/main/default/objects/FS_Artifact__c/fields/FS_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_Version__c</fullName>
    <description>version</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>