force-app/main/default/objects/FS_Artifact__c/fields/Second_Dependency_Artifact_Type__c.field-meta.xml
<CustomField>
    <fullName>Second_Dependency_Artifact_Type__c</fullName>
    <label>Second Dependency Artifact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>CUI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>