force-app/main/default/objects/FS_Artifact__c/fields/Second_Dependency_Break_Version__c.field-meta.xml
<CustomField>
    <fullName>Second_Dependency_Break_Version__c</fullName>
    <label>Second Dependency Break Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>