force-app/main/default/objects/FS_Artifact__c/fields/Settings_Update__c.field-meta.xml
<CustomField>
    <fullName>Settings_Update__c</fullName>
    <label>Settings Update</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>