force-app/main/default/objects/FS_Artifact__c/recordTypes/FS_Dry_Run.recordType-meta.xml
<RecordType>
    <fullName>FS_Dry_Run</fullName>
    <active>true</active>
    <description>Dry Run</description>
    <label>Dry Run</label>
</RecordType>