force-app/main/default/objects/FS_Artifact__c/recordTypes/FS_Published.recordType-meta.xml
<RecordType>
    <fullName>FS_Published</fullName>
    <active>true</active>
    <description>Published</description>
    <label>Published</label>
</RecordType>