force-app/main/default/objects/FS_Artifact__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>FS_Artifact_Type__c</columns>
    <columns>FS_Enabled__c</columns>
    <columns>FS_Rank__c</columns>
    <columns>FS_Ruleset__c</columns>
    <columns>FS_Version__c</columns>
    <columns>Record_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>